--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
-
     <!-- Fonts Awesome -->
-    <script src="https://kit.fontawesome.com/f743791ba4.js" crossorigin="anonymous"></script>
-
+    <script
+      src="https://kit.fontawesome.com/f743791ba4.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Link to local file - Switch to link above on production ? -->
-    <!-- <link rel="stylesheet" href="fontawesome/css/fontawesome.css">
-    <link rel="stylesheet" href="fontawesome/css/brands.css">
-    <link rel="stylesheet" href="fontawesome/css/solid.css"> -->
+    <link rel="stylesheet" href="fontawesome/css/fontawesome.css" />
+    <link rel="stylesheet" href="fontawesome/css/brands.css" />
+    <link rel="stylesheet" href="fontawesome/css/solid.css" />
+
     <title>Huddle Landing Page</title>
   </head>
   <body>
@@ -32,8 +34,8 @@
 
               <p>
                 Huddle re-imagines the way we build communities. You have a
-                voice, but so does your audience. Create connections with your users
-                as you engage in genuine discussions.
+                voice, but so does your audience. Create connections with your
+                users as you engage in genuine discussions.
               </p>
 
               <button>Register</button>
